<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StoryU</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="preview_imgup">Preview Image Upload</string>
    <string name="desc">Description</string>
    <string name="desc2">Tell your story here!</string>
    <string name="gallery_add">gallery add</string>
    <string name="camera_add">camera add</string>
    <string name="image_story">image story</string>
    <string name="email_here">your email</string>
    <string name="email_error">invalid email format</string>
    <string name="name_right">name must be filled</string>
    <string name="pass_here">your password</string>
    <string name="pass_error">password at least 8 characters</string>
    <string name="sign_in">Sign In</string>
    <string name="name_here">your name</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_member">dont have an account?</string>
    <string name="wrong_input">wrong email or password</string>
    <string name="have_acc">already have an account?</string>
    <string name="no_permission">was denied permission</string>
    <string name="upload_warning">upload image first</string>
    <string name="publish">PUBLISH</string>
    <string name="title_activity_maps" tools:ignore="MissingTranslation">Story Maps</string>
    <string name="timeout">Timeout</string>
    <string name="reload">RELOAD</string>
</resources>