<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.member.SignupActivity">

    <ImageView
        android:id="@+id/iv_signupmember"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@+id/et_namemembers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iv_signupheader" />

    <com.cencen.storyu.customelement.ETName
        android:id="@+id/et_namemembers"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/name_here"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.cencen.storyu.customelement.ETEmailCustom
        android:id="@+id/et_emailmembers"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/email_here"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_namemembers" />

    <com.cencen.storyu.customelement.ETPassword
        android:id="@+id/et_passmembers"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/pass_here"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_emailmembers" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/violet2"
        android:fontFamily="@font/bold"
        android:text="@string/sign_up"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passmembers" />

    <TextView
        android:id="@+id/tv_haveacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/regular"
        android:text="@string/have_acc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <TextView
        android:id="@+id/tv_gotosignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bold"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_haveacc"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingbars"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loadingbar" />

</androidx.constraintlayout.widget.ConstraintLayout>