<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.story.UploadStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_uploadimageprev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/preview_imgup"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/iv_previewimageupload" />

            <ImageButton
                android:id="@+id/btn_takephoto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_icon"
                android:contentDescription="@string/camera_add"
                android:src="@drawable/ib_takephoto"
                app:layout_constraintEnd_toStartOf="@id/btn_photogallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_uploadimageprev" />

            <ImageButton
                android:id="@+id/btn_photogallery"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/circle_icon"
                android:contentDescription="@string/gallery_add"
                android:src="@drawable/ib_libraryphoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_takephoto"
                app:layout_constraintTop_toBottomOf="@+id/iv_uploadimageprev" />

            <TextView
                android:id="@+id/tv_descphoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/bold"
                android:text="@string/desc"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_takephoto" />

            <EditText
                android:id="@+id/et_descripphoto"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/regular"
                android:hint="@string/desc2"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_descphoto" />

            <Button
                android:id="@+id/btn_publishstory"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/magenta"
                android:fontFamily="@font/bold"
                android:text="@string/publish"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_descripphoto" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingbars"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loadingbar" />

</androidx.constraintlayout.widget.ConstraintLayout>