<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context=".view.story.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_storymember"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1"
        tools:listitem="@layout/item_storycard" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menustory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/violet1"
        fab:menu_colorPressed="@color/violet2"
        fab:menu_colorRipple="@color/violet2"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/icon_fabmenumember"
        fab:menu_labels_colorNormal="@color/violet1"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="@color/black"
        fab:menu_labels_textSize="16sp"
        fab:menu_openDirection="up"
        fab:menu_shadowRadius="1dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_mapstory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_location"
            app:fab_colorNormal="@color/violet1"
            app:fab_colorPressed="@color/violet2"
            app:fab_label="@string/title_activity_maps"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_uploadstorymember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_upload_story_member"
            app:fab_colorNormal="@color/violet1"
            app:fab_colorPressed="@color/violet2"
            fab:fab_label="@string/upload"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_settingmember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting_member"
            app:fab_colorNormal="@color/violet1"
            app:fab_colorPressed="@color/violet2"
            fab:fab_label="@string/settings"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_signoutmember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_signout_member"
            app:fab_colorNormal="@color/violet1"
            app:fab_colorPressed="@color/violet2"
            fab:fab_label="@string/sign_out"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_process"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loadingbar" />

</androidx.constraintlayout.widget.ConstraintLayout>